# StudentManagementApp

./: .gitmodules  CMakeLists.txt  LICENSE.TXT  StudentManagement.qmlproject  StudentManagement.qmlproject.qtds  applicationresource.qrc  main.qml  qmlmodules
.github/: .markdownlint.jsonc  README.md
.github/workflows/: jekyll-gh-pages.yml
content/: CMakeLists.txt  ItemList.qml  ItemListView.ui.qml  ItemTable.qml  ItemTableView.ui.qml  MainWindow.qml  MainWindowForm.ui.qml  Overview.qml  OverviewForm.ui.qml  Statistics.qml  StatisticsForm.ui.qml
docs/: .markdownlint.jsonc  FeatureRequest.md  Features.md
imports/: CMakeLists.txt
imports/StudentManagement/: CMakeLists.txt  qmldir
imports/StudentManagement/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
src/Models/: clisttablemodel.cpp  clisttablemodel.h  datatableprovider.cpp  datatableprovider.h  dlisttablemodel.cpp  dlisttablemodel.h  filtercolumnselections.cpp  filtercolumnselections.h  mainwindowcontroller.cpp  mainwindowcontroller.h  overviewcontroller.cpp  overviewcontroller.h  slisttablemodel.cpp  slisttablemodel.h  sortedmethodselections.cpp  sortedmethodselections.h  sortfiltertablemodel.cpp  sortfiltertablemodel.h  storagedstructureselections.cpp  storagedstructureselections.h  student.cpp  student.h  vectortablemodel.cpp  vectortablemodel.h
src/Models/Commons/: comparefunctions.cpp  comparefunctions.h  sortedmethodselections.cpp  storagedstructureselections.h  student.cpp  studentvalidator.h
src/Models/Overview/: clisttablemodel.cpp  dlisttablemodel.cpp  overviewcontroller.cpp  overviewcontroller.h  slisttablemodel.cpp  vectortablemodel.cpp
src/Models/Statistics/: highestscoreslist.cpp  highestscoreslist.h  highestscoreslistview.cpp  highestscoreslistview.h  lowestscoreslist.cpp  lowestscoreslist.h  lowestscoreslistview.cpp  lowestscoreslistview.h  statisticscontroller.cpp  statisticscontroller.h
src/Utils/: appenviroment.cpp  appenviroment.h  comparefunctions.cpp  studentvalidator.cpp  studentvalidator.h  xlsxproxy.cpp  xlsxproxy.h
